@@ -279,8 +279,6 @@ extern void register_edge_assert_for (tree, edge, enum tree_code,
 extern bool stmt_interesting_for_vrp (gimple *);
 extern bool infer_value_range (gimple *, tree, tree_code *, tree *);
 
-extern bool vrp_bitmap_equal_p (const_bitmap, const_bitmap);
-
 extern bool range_int_cst_p (const value_range_base *);
 
 extern int compare_values (tree, tree);
